# CodeDeck

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.3.md  RELEASE_NOTES_v1.2.4.md  RELEASE_NOTES_v1.2.5.md  RELEASE_NOTES_v1.2.6.md  RELEASE_NOTES_v1.3.0.md  SECURITY.md  codedeck-github-project-details-v2.patch  codedeck-release-automation.patch  codedeck-v1.2.5-git-and-ghostty-fixes.patch  codedeck-v1.4.0-release-readme.patch  index.html  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  hosted-web.yml  release.yml
apps/desktop/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
docs/: README.md  architecture.md  config.md  releasing.md  updater-setup.md
hosted/: .env.example  Dockerfile  Dockerfile.dockerignore  README.md  compose.yml  setup.sh
scripts/: release.mjs
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
src-tauri/src/commands/: git.rs  processes.rs  projects.rs
src-tauri/src/git/: parser.rs  repository.rs
src-tauri/src/platform/: launchers.rs  notifications.rs
src-tauri/src/process/: manager.rs  state.rs
src-tauri/src/projects/: inspection.rs  templates.rs  validation.rs
(+68 files in other folders)
