[package]
name = "code-deck"
version = "1.0.0"
description = "Local developer project cockpit"
authors = ["Code Deck Contributors"]
edition = "2021"

[lib]
name = "code_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
which = "8"
open = "5"
