[package]
name = "code-deck"
version = "0.2.0"
description = "Local developer project cockpit"
authors = ["Code Deck Contributors"]
edition = "2021"

[lib]
name = "code_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
which = "8"
open = "5"
